[project]
name = "strava-data"
version = "0.1.0"
description = ""
authors = [{ name = "Antoine Toubhans", email = "antoine@toubhans.org" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "streamlit>=1.27.0,<2",
    "pandas>=2.1.1,<3",
    "pyyaml>=6.0.1,<7",
    "stravalib~=1.5",
    "matplotlib>=3.8.0,<4",
    "tqdm>=4.66.1,<5",
    "black>=23.10.0,<24",
    "stqdm>=0.0.5,<0.0.6",
    "watchdog>=3.0.0,<4",
]
